--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
-    "react-toastify": "^11.0.5"
+    "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
+    "slick-slider": "^1.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
